--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,19 +1,24 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
+    <ion-tab-button tab="inicio">
       <ion-icon name="triangle"></ion-icon>
-      <ion-label>Tab 1</ion-label>
+      <ion-label>Inicio</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
+    <ion-tab-button tab="listagem">
       <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Tab 2</ion-label>
+      <ion-label>Listagem</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
+    <ion-tab-button tab="cadastro">
       <ion-icon name="square"></ion-icon>
-      <ion-label>Tab 3</ion-label>
+      <ion-label>Cadastro</ion-label>
+    </ion-tab-button>
+
+    <ion-tab-button tab="sobre">
+      <ion-icon name="square"></ion-icon>
+      <ion-label>Sobre</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 
