--- a/src/app/sobre/sobre.page.html
+++ b/src/app/sobre/sobre.page.html
@@ -6,4 +6,55 @@
 
 <ion-content>
 
+  <ion-card>
+    <p><b>
+      esse aplicativo foi desenvolvido <br>
+      como parte das exigencias do <br>
+      curso de ciência da computação
+      <br><br>
+      Unincor - Vale do Rio Verde
+    </b></p>
+  </ion-card>
+
+  <ion-card>
+
+
+    <p><b>guilherme Silva - Formando em ciência da computação</b></p>
+    <img src="/assets/images/dbz.gif" alt="">
+
+  </ion-card>
+
+
+
+
+
+
+
+
+
+  <ion-card>
+    
+    <center>
+    <a href="https://github.com/GuilhermeSTrydeR" target="blank"><ion-icon name="logo-github"></ion-icon></a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a href="https://gitlab.com/GuilhermeSTrydeR" target="blank"><ion-icon name="logo-gitlab"></ion-icon></a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a href="https://www.unincor.br/" target="blank"><ion-icon name="school"></ion-icon></a>
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    &nbsp;
+    <a href="https://ionicframework.com/" target="blank"><ion-icon name="logo-ionic"></ion-icon></a>
+    </center>
+
+  </ion-card>
+
+ 
+
 </ion-content>
