--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,22 +2,22 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="inicio">
-      <ion-icon name="triangle"></ion-icon>
+      <ion-icon name="home"></ion-icon>
       <ion-label>Inicio</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="listagem">
-      <ion-icon name="ellipse"></ion-icon>
+      <ion-icon name="list-circle"></ion-icon>
       <ion-label>Listagem</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="cadastro">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="list"></ion-icon>
       <ion-label>Cadastro</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="sobre">
-      <ion-icon name="square"></ion-icon>
+      <ion-icon name="cafe"></ion-icon>
       <ion-label>Sobre</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
