ajustes na pagina sobre

--- a/src/app/sobre/sobre.page.html
+++ b/src/app/sobre/sobre.page.html
@@ -7,31 +7,29 @@
 <ion-content>
 
   <ion-card>
+    <center>
+      <h1>Unincor - Vale do Rio Verde</h1>
+    </center>
+  </ion-card>
+
+  <ion-card>
     <p><b>
       esse aplicativo foi desenvolvido <br>
       como parte das exigencias do <br>
       curso de ciência da computação
-      <br><br>
-      Unincor - Vale do Rio Verde
     </b></p>
   </ion-card>
 
   <ion-card>
 
-
-    <p><b>guilherme Silva - Formando em ciência da computação</b></p>
+    <center>
+    <p><b>Guilherme Silva - Formando em ciência da computação</b></p>
     <img src="/assets/images/dbz.gif" alt="">
+    </center>
 
   </ion-card>
 
-
-
-
-
-
-
-
-
+  <!-- esse card ficou dessa forma pois eu preferi montar ele aqui ao inves de ajustar no CSS da pagina-->
   <ion-card>
     
     <center>
