--- a/src/app/sobre/sobre.page.scss
+++ b/src/app/sobre/sobre.page.scss
@@ -1,3 +1,9 @@
+//espaçamento basico nos elementos dos cards
 ion-card{
     padding: 5px;
+}
+
+//borda simples na GIF da pagina sobre
+img{
+    border: 5px solid black;
 }
