--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -6,4 +6,23 @@
 
 <ion-content>
 
+  <ion-card>
+    
+    <div class="forms">
+      <form name="form_cad">
+        <ion-input type="text" placeholder="Nome"><ion-icon name="person"></ion-icon></ion-input>
+        <ion-input type="text" placeholder="Email"><ion-icon name="mail"></ion-icon></ion-input>
+        <ion-input type="text" placeholder="Telephone"><ion-icon name="call"></ion-icon></ion-input>
+        <ion-input type="password" placeholder="Senha"><ion-icon name="lock-closed"></ion-icon></ion-input>
+      </form>
+
+      <center>
+       <ion-button size="small" class="submit-button" (click)="cadastrar()" color="success">Cadastrar</ion-button>
+      </center>
+
+    </div>
+
+
+  </ion-card>
+
 </ion-content>
