terminado a parte do cadastro e feito a tela inicial

--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -6,4 +6,34 @@
 
 <ion-content>
 
+  <ion-card id="title">
+    <center>
+      <h1>
+        CALÇADOS STRYDER'S®
+      </h1>
+    </center>
+  </ion-card>
+    
+  <ion-card>
+    <center>
+      <p>
+        do seu pé ao seu estilo!
+      </p>
+    </center>
+
+    <center>
+      <p>
+        venha conferir nossos mais diversos calçados
+      </p>
+    </center>
+  
+  </ion-card>
+  
+  
+  <ion-card>
+    <center>
+      <img src="/assets/images/calcados.jpg" alt="">
+    </center>
+  </ion-card>
+
 </ion-content>
