--- a/src/app/sobre/sobre.page.html
+++ b/src/app/sobre/sobre.page.html
@@ -16,16 +16,12 @@
     <p><b>
       esse aplicativo foi desenvolvido <br>
       como parte das exigencias do <br>
-      curso de ciência da computação
+      curso de ciência da computação <br>
+      <p><b>Guilherme Silva - Formando em ciência da computação</b></p>
+      <img src="/assets/images/dbz.gif" alt="dragon_ball_z">
     </b></p>
-  </ion-card>
 
-  <ion-card>
-
-    <center>
-    <p><b>Guilherme Silva - Formando em ciência da computação</b></p>
-    <img src="/assets/images/dbz.gif" alt="">
-    </center>
+  
 
   </ion-card>
 
