--- a/src/app/cadastro/cadastro.page.html
+++ b/src/app/cadastro/cadastro.page.html
@@ -6,14 +6,31 @@
 
 <ion-content>
 
-  <ion-card>
+  <ion-card id="card_cad">
     
     <div class="forms">
       <form name="form_cad">
-        <ion-input type="text" placeholder="Nome"><ion-icon name="person"></ion-icon></ion-input>
-        <ion-input type="text" placeholder="Email"><ion-icon name="mail"></ion-icon></ion-input>
-        <ion-input type="text" placeholder="Telephone"><ion-icon name="call"></ion-icon></ion-input>
-        <ion-input type="password" placeholder="Senha"><ion-icon name="lock-closed"></ion-icon></ion-input>
+
+        <div class="cad_field">
+          <ion-input type="text" placeholder="Nome"><ion-icon name="person"></ion-icon></ion-input>
+        </div>
+
+        <div class="cad_field">
+          <ion-input type="email" placeholder="Email"><ion-icon name="mail"></ion-icon></ion-input>
+        </div>
+
+        <div class="cad_field">
+          <ion-input type="text" placeholder="Telephone"><ion-icon name="call"></ion-icon></ion-input>
+        </div>
+
+        <div class="cad_field">
+          <ion-input type="password" placeholder="Senha"><ion-icon name="lock-closed"></ion-icon></ion-input>
+        </div>
+
+        
+        
+        
+        
       </form>
 
       <center>
